--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ spring:
 
 dubbo:
  application:
-   name: eazyDemoProvider
+   name: eazyDemoProvider1
  registry:
    protocol: zookeeper
    address: 192.168.193.20:2181
